update link and resume

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 </body>
 <footer>
     <div class="footer-container">
-        A web development project by Aidi Khalid. Made with HTML and CSS. <a href="https://github.com/Geevee-101/Geevee-101.github.io" class="project-detail">Github</a>.
+        A web development project by Aidi Khalid. Made with HTML and CSS. <a href="https://github.com/Geevee-101/portfolio-creative" class="project-detail">Github</a>.
     </div>
 </footer>
 </html>
